# ui_copycat

./: LICENSE  README.md  capture_eval.py  capture_stripe.py  design_document.md  evaluate_root.py  feedback_integrated.txt  generate_agent.py  generate_agent_images.py  pyproject.toml
eval_assets/hover/: page.html  snapshot.json
eval_assets/post_hover/: nav.html  page.html  snapshot.json
eval_assets/pre_hover/: snapshot.json
generated-page/: index.html  package-lock.json  package.json
generated-page/src/: App.jsx  index.css
stripe_assets/hover/: nav.html  page.html  snapshot.json
stripe_assets/post_hover/: nav.html  page.html  snapshot.json
stripe_assets/pre_hover/: page.html  snapshot.json
